# mercado-livre-tracker

./: .gitignore  README.md  debug_parcelas.py  products.txt  pyproject.toml  setup.ps1
src/: crawler.py  dashboard.py  install_service.py  notifier.py  scheduler.py  storage.py
src/mercado_livre_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
